--- a/src/app/pages/sales/turn-over/turn-over.component.html
+++ b/src/app/pages/sales/turn-over/turn-over.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="card" *ngIf="!isLoading1">
     <div class="card-header">
-        <h5>Payment Collection Plan</h5>
+        <h5>Turnover</h5>
     </div>
     <form [formGroup]="angForm">
         <div class="card-block">
