--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -1,31 +1,32 @@
 <div class="account-pages my-5 pt-sm-5">
   <div class="container">
+
     <div class="row justify-content-center">
       <div class="col-md-8 col-lg-6 col-xl-5">
         <div class="card overflow-hidden">
           <div class="bg-soft bg-primary">
             <div class="row">
-              <div class="col-7">
-                <div class="text-primary p-4">
-                  <!-- <h5 class="text-primary">Welcome Back !</h5>
-                  <p>Sign in to continue to Dashboard.</p> -->
-                </div>
-              </div>
-              <div class="col-5 align-self-end">
-                <img src="assets/images/profile-img.png" alt="" class="img-fluid">
+              <!-- <div class="col-7">
+                  <div class="text-primary p-4">
+                     <h5 class="text-primary">Welcome Back !</h5>
+                    <p>Sign in to continue to Dashboard.</p>
+                  </div>
+                </div> -->
+              <div class="col-sm text-center">
+                <img src="assets/images/bways.png" alt="" class="img-fluid" style="height: 100%;">
               </div>
             </div>
           </div>
           <div class="card-body pt-0">
             <!-- <div>
-              <a routerLink="/">
-                <div class="avatar-md profile-user-wid mb-4">
-                  <span class="avatar-title rounded-circle bg-light">
-                    <img src="assets/images/logo.svg" alt="" class="rounded-circle" height="34">
-                  </span>
-                </div>
-              </a>
-            </div> -->
+                <a routerLink="/">
+                  <div class="avatar-md profile-user-wid mb-4">
+                    <span class="avatar-title rounded-circle bg-light">
+                      <img src="assets/images/logo.svg" alt="" class="rounded-circle" height="34">
+                    </span>
+                  </div>
+                </a>
+              </div> -->
             <div class="p-2">
               <form class="form-horizontal" [formGroup]="loginForm">
 
@@ -54,27 +55,28 @@
                 </div>
 
                 <!-- <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="remember-check">
-                  <label class="form-check-label" for="remember-check">
-                    Remember me
-                  </label>
-                </div> -->
+                    <input class="form-check-input" type="checkbox" id="remember-check">
+                    <label class="form-check-label" for="remember-check">
+                      Remember me
+                    </label>
+                  </div> -->
 
                 <div class="mt-3 d-grid">
-                  <button class="btn btn-primary" [disabled]="isLoading" (click)="onSubmit()" style="margin-top: 3%;margin-bottom: 5%;"><i class="fa"
+                  <button class="btn btn-primary" [disabled]="isLoading" (click)="onSubmit()"
+                    style="margin-top: 3%;margin-bottom: 5%;"><i class="fa"
                       [ngClass]="{'fa-spin fa-spinner': isLoading}"></i> Log In</button>
                   <!-- <button class="btn btn-primary" type="submit" (click)="onSubmit()" Log In>
-                    <span class="spinner-border spinner-border-sm" role="status" aria-hidden="false"></span>
-                    <span class="sr-only">Log In </span>
-                  </button> -->
+                      <span class="spinner-border spinner-border-sm" role="status" aria-hidden="false"></span>
+                      <span class="sr-only">Log In </span>
+                    </button> -->
                   <!-- <button class="btn btn-primary" type="submit" (click)="onSubmit()">Log In</button> -->
                 </div>
 
                 <!-- <div class="mt-4 text-center">
-                  <a routerLink="/account/reset-password" class="text-muted"><i class="mdi mdi-lock mr-1"></i> Forgot
-                    your
-                    password?</a>
-                </div> -->
+                    <a routerLink="/account/reset-password" class="text-muted"><i class="mdi mdi-lock mr-1"></i> Forgot
+                      your
+                      password?</a>
+                  </div> -->
               </form>
             </div>
 
@@ -82,6 +84,7 @@
         </div>
       </div>
     </div>
+
   </div>
 
   <!-- end container -->
