--- a/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.scss
+++ b/src/app/pages/sales/payment-collection-plan/payment-collection-plan.component.scss
@@ -2,8 +2,7 @@
     background-color:#b8cfee; /* Change this to your desired background color */
     color: #495057; /* Change this to your desired text color */
     font-weight: bold;
-    text-align: center;
-   
+    // text-align: center;
   }
   
   
@@ -13,6 +12,5 @@
     background-color: #333;
     color: white; 
     font-weight: bold;
-    text-align: center;
-
+    // text-align: center;
   }
