--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -3,7 +3,7 @@
 
     <div class="row justify-content-center">
       <div class="col-md-8 col-lg-6 col-xl-5">
-        <div class="card overflow-hidden">
+        <div class="card overflow-hidden" style="box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;">
           <div class="bg-soft bg-primary">
             <div class="row">
               <!-- <div class="col-7">
@@ -12,8 +12,8 @@
                     <p>Sign in to continue to Dashboard.</p>
                   </div>
                 </div> -->
-              <div class="col-sm text-center">
-                <img src="assets/images/bways.png" alt="" class="img-fluid" style="height: 100%;">
+              <div class="col-5 align-self-end">
+                <img src="assets/images/profile-img.png" alt="" class="img-fluid">
               </div>
             </div>
           </div>
