--- a/src/app/account/auth/login/login.component.html
+++ b/src/app/account/auth/login/login.component.html
@@ -61,9 +61,8 @@
                     </label>
                   </div> -->
 
-                <div class="mt-3 d-grid">
-                  <button class="btn btn-primary" [disabled]="isLoading" (click)="onSubmit()"
-                    style="margin-top: 3%;margin-bottom: 5%;"><i class="fa"
+                <div class="mt-3 d-grid ">
+                  <button class="btn btn-primary" [disabled]="isLoading" (click)="onSubmit()" style="margin-top: 3%;margin-bottom: 5%;"><i class="fa"
                       [ngClass]="{'fa-spin fa-spinner': isLoading}"></i> Log In</button>
                   <!-- <button class="btn btn-primary" type="submit" (click)="onSubmit()" Log In>
                       <span class="spinner-border spinner-border-sm" role="status" aria-hidden="false"></span>
@@ -71,7 +70,10 @@
                     </button> -->
                   <!-- <button class="btn btn-primary" type="submit" (click)="onSubmit()">Log In</button> -->
                 </div>
-
+                <div class="text-center" >
+                  <img src="assets/images/bways.png" alt="Your Logo" class="img-fluid" style="height: 30px;">
+                </div>
+    
                 <!-- <div class="mt-4 text-center">
                     <a routerLink="/account/reset-password" class="text-muted"><i class="mdi mdi-lock mr-1"></i> Forgot
                       your
@@ -89,4 +91,3 @@
 
   <!-- end container -->
 </div>
-<!-- end page -->
