--- a/src/app/account/auth/login/login.component.scss
+++ b/src/app/account/auth/login/login.component.scss
@@ -1,1 +1,9 @@
 
+
+.btn-primary{
+    width: 300px !important;
+    display: block !important; 
+    margin: 0 auto !important;
+    font-size: 16px !important;
+}
+
